--- a/_sass/foundation-components/_grid.scss
+++ b/_sass/foundation-components/_grid.scss
@@ -28,8 +28,13 @@ $last-child-float: $opposite-direction !default;
 // @FUNCTION
 // $colNumber - Found in settings file
 // $totalColumns - Found in settings file
+
+// @function grid-calc($colNumber, $totalColumns) {
+//   @return percentage(calc($colNumber / $totalColumns));
+// }
+
 @function grid-calc($colNumber, $totalColumns) {
-  @return percentage(calc($colNumber / $totalColumns));
+  @return calc(#{$colNumber} / #{$totalColumns} * 100%);
 }
 
 //
