--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,37 +1,37 @@
-<!-- Services Section -->
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
+<!-- بخش خدمات -->
+<section id="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">خدمات نوآورانه ما</h2>
+                <h3 class="section-subheading text-muted">تیم ما راهکارهای پیشرفته‌ای در زمینه هوش مصنوعی، توسعه الگوریتم و سخت‌افزار ارائه می‌دهد تا کسب‌وکار شما هوشمندتر و سریع‌تر پیش رود.</h3>
             </div>
         </div>
-    </section>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-robot fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">هوش مصنوعی و مدل‌های زبانی</h4>
+                <p class="text-muted">ساخت و آموزش مدل‌های هوش مصنوعی روی داده‌های مالی، تصاویر و استخراج متن از اسناد و تصاویر برای تصمیم‌گیری هوشمندانه.</p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">توسعه الگوریتم</h4>
+                <p class="text-muted">طراحی و پیاده‌سازی الگوریتم‌های اختصاصی برای حل مسائل پیچیده و افزایش بهره‌وری کسب‌وکار شما.</p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-microchip fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">سخت‌افزار و FPGA</h4>
+                <p class="text-muted">توسعه و بهینه‌سازی سیستم‌های سخت‌افزاری با استفاده از FPGA و فناوری‌های پیشرفته برای عملکرد سریع و قابل اعتماد.</p>
+            </div>
+        </div>
+    </div>
+</section>
