Added: Services, Team memebers, Time line.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -269,9 +269,9 @@ header {
     text-align: center;
     color: #ffffff;
     background-attachment: scroll;
-    background-image: url('{{ site.baseurl }}/img/header-bg.png');
+    background-image: url('{{ site.baseurl }}img/header-bg.png');
     background-position: center center;
-    background-repeat: none;
+    background-repeat: no-repeat;;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
