--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,8 +2,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">ارتباط با ما</h2>
+                    <h3 class="section-subheading text-muted" style="color: rgb(194, 202, 208);">اگر سوالی دارید یا مایل به همکاری هستید، خوشحال می‌شویم با ما در ارتباط باشید.</h3>
                 </div>
             </div>
             <div class="row">
