--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,10 @@
     <link rel="icon" type="image/png" href="{{ '/img/logos/team_logo.png' | relative_url }}">
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <!-- <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}"> -->
-
+    <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom Fonts -->
-    <!-- <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}"> -->
+    <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
 
     <link rel="stylesheet" href="{{ '/style.css' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="stylesheet" href="{{ '/css/font-awesome/css/font-awesome.min.css' | prepend: site.baseurl | prepend: site.url }}">
