--- a/_includes/services.html
+++ b/_includes/services.html
@@ -10,24 +10,24 @@
         <div class="row text-center">
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-robot fa-stack-1x fa-inverse"></i>
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-robot fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">هوش مصنوعی و مدل‌های زبانی</h4>
                 <p class="text-muted">ساخت و آموزش مدل‌های هوش مصنوعی روی داده‌های مالی، تصاویر و استخراج متن از اسناد و تصاویر برای تصمیم‌گیری هوشمندانه.</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-gear fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">توسعه الگوریتم</h4>
                 <p class="text-muted">طراحی و پیاده‌سازی الگوریتم‌های اختصاصی برای حل مسائل پیچیده و افزایش بهره‌وری کسب‌وکار شما.</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-microchip fa-stack-1x fa-inverse"></i>
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-microchip fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">سخت‌افزار و FPGA</h4>
                 <p class="text-muted">توسعه و بهینه‌سازی سیستم‌های سخت‌افزاری با استفاده از FPGA و فناوری‌های پیشرفته برای عملکرد سریع و قابل اعتماد.</p>
